gitops/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiteworks-app
  namespace: kiteworks-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kiteworkstest-staging.eastus.cloudapp.azure.com
      secretName: kiteworks-staging-tls
  rules:
    - host: kiteworkstest-staging.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiteworks-app
                port:
                  number: 80
